--- a/MPS_v2.Rmd
+++ b/MPS_v2.Rmd
@@ -437,189 +437,10 @@ psi1.to_dense() #Result
 #|10> -> |11>
 ```
 
-```{python}
-qu.ket(psi1.to_dense())
-```
+## Apply 2-qubit gate to MPS manually
 
 ```{python}
-#Manual function
-N=4
-state = np.zeros(2**N)
-state[8] = 1
-#state[-1] = 1
-state = state.reshape([2] * N)
-
-state = to_full_MPS(state, d=2, N=4)
-```
-
-```{python}
-# o - o - o 
-
-# o - o - o 
-# |   |   |
-# CNOT
-# |  |
-
-#=>
-
-# [Gate]  -  o - o
-#  |  |       |   | = rho1 => diagonalizzi => X, X^-1
-#          -  oH- oH 
-#
-
-#=>
-
-# o -s- o - o
-# |     |   |
-```
-
-```{python}
-CNOT = qu.controlled('not')
-CNOT
-```
-
-```{python}
-pos = 0 #(pos, pos+1)
-
-[s.shape for s in state]
-```
-
-```{python}
-left_tens = np.array(state[pos])
-right_tens = np.array(state[pos+1])
-rightmost = state[pos+2:]
-
-d = left_tens.shape[0] #dimension of a qubit
-chi = right_tens.shape[-1] #bound link between the group and the next (pos+2) qubit
-print(f'd: {d}, chi: {chi}')
-```
-
-```{python}
-gate = np.array(CNOT.reshape(2,2,2,2))
-```
-
-```{python}
-# o 2  o - -3 o 
-# |1   |3      |
-#  CNOT
-# |  |
-# -1 -2
-```
-
-```{python}
-gate_contracted = ncon([gate, left_tens, right_tens], [[-1, -2, 1, 3], [1, 2], [2, 3, -3]])
-```
-
-```{python}
-gate_contracted.shape
-```
-
-```{python}
-rho = right_contract(rightmost) #dim is chi x chi
-```
-
-```{python}
-[s.shape for s in rightmost]
-```
-
-```{python}
-rho
-```
-
-```{python}
-eigenval, eigenvec = LA.eigh(rho)
-
-#Mask out 0 eigenvalues 
-mask = eigenval > 0
-eigenval = eigenval[mask]
-eigenvec = eigenvec[:, mask]
-
-sqrt_eigenval = np.sqrt(abs(eigenval))
-
-X = eigenvec @ np.diag(sqrt_eigenval) @ eigenvec.T
-Xinv = eigenvec @ np.diag(1./sqrt_eigenval) @ eigenvec.T
-
-```
-
-```{python}
-# #The column ``v[:, i]`` is the normalized eigenvector corresponding
-#     to the eigenvalue ``w[i]``.  Will return a matrix object if `a` is
-#     a matrix object.
-```
-
-```{python}
-gate_contracted.shape
-```
-
-```{python}
-# (Gate - X) - (X-1 - o) -
-# |  |                |
-```
-
-```{python}
-# Gate -
-# | |
-
-#=>
-
-# o - o -
-# |   |
-```
-
-```{python}
-gate_contracted_prime = ncon([gate_contracted,X],[[-1,-2,1],[1,-3]])
-
-boundary_qubit = state[pos+2]
-boundary_qubit_prime = ncon([Xinv, boundary_qubit], [[-1,1], [1,-2,-3]])
-
-```
-
-```{python}
-gate_contracted_prime.shape
-```
-
-```{python}
-#SVD
-U, S, Vh = LA.svd(gate_contracted_prime.reshape(d, -1), full_matrices=False)
-```
-
-```{python}
-left_new = U
-right_new = np.diag(S) @ Vh
-```
-
-```{python}
-contraction_dim = boundary_qubit_prime.shape[0]
-```
-
-```{python}
-right_new = right_new.reshape(-1, d, contraction_dim)
-```
-
-```{python}
-new_qubits = [left_new, right_new, boundary_qubit_prime, *rightmost[1:]]
-```
-
-```{python}
-[s.shape for s in new_qubits]
-```
-
-```{python}
-[bin(i)[2:] + '0'*(4 - len(bin(i)[2:])) for i in range(2**N)]
-```
-
-```{python}
-#|0000> -> |0000>
-#|1000> -> |1100> = ()
-
-#000 001 010 011 100 101 110 111
-```
-
-```{python}
-to_dense(new_qubits).flatten()
-```
-
-```{python}
+#Helper functions
 def right_contract(states):
     """
     Given the N right-most states of a MPS, computes their contraction with themselves, as follows:
@@ -653,11 +474,117 @@ def right_contract(states):
     #print(top_connections, bottom_connections)
     
     return ncon(states + states, top_connections + bottom_connections)
+
+def left_contract(states):
+    """
+    Given the N left-most states of a MPS, computes their contraction with themselves, as follows:
     
+    o  -  o  -  o  -  o   -
+    |     |     |     |
+    o.H - o.H - o.H - o.H -
+    
+    Returns a order 2 tensor.
+    """
+    #Add np.conjugate (when we will use complex numbers)
+
+    
+    #Convention is the following (idk if it's the most efficient...)
+    #e.g. for N=4
+    # U1 -2- U2 -5- U3 -8- U4 - (-1)
+    # |1     |4     |7     |10
+    # U1 -3- U2 -6- U3 -9- U4 - (-2)
+    #Basically, the contracted indices follow the order of "diagonals" from the bottom-left to the top-right.
+    #Start with the first connection, which links U1 to U1.H. Now the "top-right" is between U1 and U2.
+    #Now restart from the next connection at the bottom, which links U1 and U2. Going to the "top-right" we see U2 - U2.H, and then
+    #U2-U3, and so on.
+    
+    N = len(states) #Number of tensors to be contracted
+    #Read indices "by row"
+    bottom_indices = 3 * (np.arange(N)+1)
+    top_indices = bottom_indices - 1
+    middle_indices = bottom_indices - 2
+
+    #Free indices
+    top_indices[-1] = -1
+    bottom_indices[-1] = -2 
+
+    top_connections = [[1,2]] + [[top_indices[i], middle_indices[i+1], top_indices[i+1]] for i in range(N-1)]
+    bottom_connections = [[1,3]] + [[bottom_indices[i], middle_indices[i+1], bottom_indices[i+1]] for i in range(N-1)]
+
+    return ncon(states + states, top_connections + bottom_connections) 
+    #Here we work with Python lists, so the + is not elementwise addition, but concatenation of arrays!
 ```
 
 ```{python}
+#Objective: Apply CNOT to first two qubits, at positions (pos, pos+1)
+#Assume pos=0 (i.e. first qubit is at left boundary)
 
+#Initial state is |1000>
+N=4
+state = np.zeros(2**N)
+state[8] = 1
+state = state.reshape([2] * N)
+state = to_full_MPS(state, d=2, N=4) #convert to MPS
+
+#Define gate
+pos = 0
+CNOT = qu.controlled('not')
+gate = np.array(CNOT.reshape(2,2,2,2))
+
+#Rename qubits
+# (left_tens) - (right_tens) -chi- (right_boundary) - (rightmost...)
+#      |d             |d                 |              | | | |
+
+left_tens = np.array(state[pos])
+right_tens = np.array(state[pos+1])
+right_boundary = state[pos+2]
+rightmost = state[pos+3:]
+
+#Dimensions
+d = left_tens.shape[0] #dimension of a qubit
+chi = right_tens.shape[-1] #dimension of link between right_tens and right_boundary
+print(f'd: {d}, chi: {chi}')
+
+#Contraction with gate
+gate_contracted = ncon([gate, left_tens, right_tens], [[-1, -2, 1, 3], [1, 2], [2, 3, -3]])
+
+#The network is now:
+# (gate_contracted) -chi- (right_boundary) - (rightmost...)
+#   |         |                 |               | | | | 
+#We need to set gate_contracted as the center of orthogonality, so that when it is split into two MPS states with SVD,
+#the approximation error is minimized.
+#We proceed by following the direct orthogonalization method (https://www.tensors.net/p-tutorial-3 fig. 3.3(e))
+
+#First we need the branch density matrix (fig.3.3(d)). For this we contract ALL tensors to the right of right_tens
+rho = right_contract([right_boundary] + rightmost) #dim is chi x chi
+
+#Then we diagonalize it
+eigenval, eigenvec = LA.eigh(rho)
+
+#Mask out 0 eigenvalues to avoid dividing by 0
+mask = eigenval > 0
+eigenval = eigenval[mask]
+eigenvec = eigenvec[:, mask]
+
+sqrt_eigenval = np.sqrt(abs(eigenval))
+X = eigenvec @ np.diag(sqrt_eigenval) @ eigenvec.T
+Xinv = eigenvec @ np.diag(1./sqrt_eigenval) @ eigenvec.T
+
+#Absorb X and Xinv into the tensors
+gate_contracted = ncon([gate_contracted,X],[[-1,-2,1],[1,-3]])
+right_boundary = ncon([Xinv, right_boundary], [[-1,1], [1,-2,-3]])
+
+#Now we can apply SVD to split gate_contracted in two tensors
+U, S, Vh = LA.svd(gate_contracted.reshape(d, -1), full_matrices=False)
+left_tens = U
+right_tens = np.diag(S) @ Vh
+right_tens = right_tens.reshape(-1, d, chi)
+new_qubits = [left_tens, right_tens, right_boundary, *rightmost]
+
+#|0000> -> |0000>
+#|1000> -> |1100> 
+
+to_dense(new_qubits).flatten()
 ```
 
 ```{python}
