--- a/MPS_v2.Rmd
+++ b/MPS_v2.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.9.1
+      jupytext_version: 1.3.2
   kernelspec:
     display_name: Python 3
     language: python
@@ -548,7 +548,7 @@ def print_state(dense_state):
 ```{python}
 from copy import deepcopy
 
-def apply_two_qubit_gate(gate_matrix, pos, state):
+def apply_two_qubit_gate_full(gate_matrix, pos, state):
     """
     Apply a 2-qubit gate specified by the unitary matrix @gate_matrix to qubits at sites (@pos, @pos+1)
     for a MPS @state.
@@ -685,10 +685,30 @@ def apply_two_qubit_gate(gate_matrix, pos, state):
 ```{python}
 from copy import deepcopy
 
-def apply_two_qubit_gate(gate_matrix, pos, state, chi=1):
+def max_bond_dimension(mps):
+    """
+    Return the maximum bond dimension of a mps state.
+    """
+    
+    if len(mps) == 1:
+        return None
+    
+    start = mps[0].shape[-1]
+    end   = mps[-1].shape[0]
+    
+    middle = 1
+    if len(mps) > 2:
+        middle = np.max([a.shape[-1] for a in mps[1:-1]])
+        
+    print(start, middle, end)
+    
+    return max(start, end, middle)
+
+def apply_two_qubit_gate(gate_matrix, pos, state, chi=2):
     """
     Apply a 2-qubit gate specified by the unitary matrix @gate_matrix to qubits at sites (@pos, @pos+1)
     for a MPS @state and contract the resulting tensor back with maximum bond dimension @chi.
+    @chi cannot be less than the maximum bond dimension of the initial mps @state.
     """
     
     N = len(state)
@@ -697,6 +717,7 @@ def apply_two_qubit_gate(gate_matrix, pos, state, chi=1):
     gate = np.array(gate_matrix.reshape(2,2,2,2)) #Reshape gate matrix to 4-order tensor
 
     assert pos < N-1, f"Trying to apply 2-qubit gate to sites ({pos},{pos+1}), but {pos+1} does not exist"
+    assert chi >= max_bond_dimension(state), "The initial MPS state cannot have a bond dimension higher than @chi."
 
     left_tens = np.array(state[pos])
     right_tens = np.array(state[pos+1])
@@ -786,8 +807,8 @@ def apply_two_qubit_gate(gate_matrix, pos, state, chi=1):
     
     #---Split to MPS---#
     #Dimensions for the SVD
-    chi_left  = chi
-    chi_right = chi
+    chi_left  = 1
+    chi_right = 1
 
     if left_is_boundary:
         d = left_tens.shape[0]
@@ -800,17 +821,21 @@ def apply_two_qubit_gate(gate_matrix, pos, state, chi=1):
 
     #---Perform SVD---#
     U, S, Vh = LA.svd(gate_contracted.reshape(chi_left * d, d * chi_right), full_matrices=False)
+    
+    #Truncation
+    U  = U[...,:chi]    
+    Vh = Vh[:chi, ...]
 
     if left_is_boundary:
         state[pos] = U
     else:
-        state[pos] = U.reshape(chi_left, d, -1)    
+        state[pos] = U.reshape(min(chi_left, chi), d, -1)    
 
-    right_tens = np.diag(S) @ Vh
+    right_tens = np.diag(S[:chi]) @ Vh
     if right_is_boundary:
         state[pos+1] = right_tens
     else:
-        state[pos+1] = right_tens.reshape(-1, d, chi_right)
+        state[pos+1] = right_tens.reshape(-1, d, min(chi_right, chi))
     
     return state
 
@@ -864,7 +889,7 @@ print_state(to_dense(state1).flatten())
 CNOT = qu.controlled('not')
 
 pos = 0
-state2 = apply_two_qubit_gate(CNOT, pos, state1, chi=1)
+state2 = apply_two_qubit_gate(CNOT, pos, state1, chi=2)
 
 print(f"Apply CNOT to sites: ({pos}, {pos+1})")
 state2 = to_dense(state2).flatten()
@@ -873,7 +898,32 @@ print_state(state2)
 ```
 
 ```{python}
-qu.swap()
+def print_shapes(arr):
+    """Prints the shapes of the ndarrays contained in the list @arr"""
+    
+    print([a.shape for a in arr])
+```
+
+```{python}
+#Test that bond dimension does not increase
+
+print("Starting state")
+s = np.zeros(2**6)
+s[8] = 1 
+s = to_approx_MPS(s, d=2, N=6, chi=4)
+print_shapes(s)
+print_state(to_dense(s).flatten())
+
+print("Approx MPS -> CNOT (2,3) with fixed chi")
+s2 = apply_two_qubit_gate(CNOT, 2, s, chi=4)
+print_shapes(s2) #The maximum bond dimension is kept to 4
+print_state(to_dense(s2).flatten())
+
+print("Full MPS -> CNOT (2,3) without restriction")
+s2bis = apply_two_qubit_gate_full(CNOT, 2, s)
+print_shapes(s2bis) #Here the maximum bond dimension is 8
+print_state(to_dense(s2bis).flatten())
+
 ```
 
 ```{python}
